# recall-local

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_PLAN.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  quality_checks.yml
chrome-extension/: background.js  gmail.js  manifest.json  options.html  options.js  popup.html  popup.js  shared.js  styles.css
config/: auto_tag_rules.json  career_pages.json  job_search.json
docker/: .env.example  README.md  docker-compose.lite.yml  docker-compose.yml  phase1b-ingest-bridge.compose.yml  validate-stack.sh
docker/bridge/: Dockerfile
docker/mkdocs/: Dockerfile
docs/: ApplicationOpsWorkspace-OverviewDossierAccess.md  CONTEXT_KICKOFF_SHARING_GUIDE.md  ENVIRONMENT_INVENTORY.md  IMPLEMENTATION_LOG.md  JOB_HUNT_RESCUE_PLAN.md  LINKEDIN_CONTENT_BRIEF.md  Networking_Event_Demo_Runbook.md  OBSERVABILITY_STRATEGY.md  Phase6A_Foundation_Brief.md  Phase6B_Job_Discovery_Brief.md  Phase6C_AI_Evaluation_Brief.md  Phase6D_Dashboard_Brief.md  README.md  Recall_local_API_Reference.md  Recall_local_Application_Ops_Roadmap.md  Recall_local_Architecture_Diagram.md  Recall_local_Daily_Dashboard_Reliability_Runbook.md  Recall_local_Design_Decisions.md  Recall_local_Eval_Scheduling.md  Recall_local_PRD.md  Recall_local_PRD_Addendum_JobSearch.md  Recall_local_Phase0_Guide.md  Recall_local_Phase1D_Eval_Guide.md  Recall_local_Phase1_Guide.md  Recall_local_Phase2_Checklists.md  Recall_local_Phase2_Demo_Rehearsal_Runbook.md  Recall_local_Phase2_Guide.md  Recall_local_Phase3A_Operator_Runbook.md  Recall_local_Phase3B_Retrieval_Quality_Runbook.md  Recall_local_Phase3C_Operations_Runbook.md  Recall_local_Phase3_Completion_Summary.md  Recall_local_Phase3_Guide.md  Recall_local_Phase4_Guide.md  Recall_local_Phase5_Checklists.md  Recall_local_Phase5_Demo_Runbook.md  Recall_local_Phase5_Guide.md  Recall_local_Phase5_Operator_Entrypoint_Runbook.md  Recall_local_Phase6_Job_Hunt_PRD.md  Recall_local_RAG_Tuning_Playbook.md  Recall_local_RAG_UI_QA_Checklist.md  (+8 more)
docs/context-kickoff-kit/: README.md
docs/docs/: index.md
docs/scaffolds/: luxury-minimal.jsx  recall-chrome-popup.jsx  recall-dashboard.jsx
n8n/workflows/: PHASE1B_CHANNEL_WIRING.md  PHASE1C_WORKFLOW02_WIRING.md  PHASE2A_WORKFLOW03_WIRING.md  (+20 more)
prompts/: job_search_coach.md  learning_coach.md  workflow_02_compare_synthesis.md  workflow_02_document_summary.md  workflow_02_explanatory_qa.md  workflow_02_multi_document_synthesis.md  workflow_02_rag_answer.md  workflow_02_rag_answer_retry.md  workflow_03_meeting_extract.md  workflow_03_meeting_extract_retry.md
scripts/: __init__.py  llm_client.py  shared_qdrant.py  shared_strings.py  shared_time.py  validate_output.py
shortcuts/: ios_send_to_recall_payload_example.json
tests/: conftest.py  test_bridge_api_contract.py  test_llm_client_pytest.py  test_phase0_bootstrap_qdrant_pytest.py  test_phase0_bootstrap_sqlite_pytest.py  test_phase0_connectivity_check_pytest.py  test_phase1_observability.py  test_phase1_phase6_cover_letter_flow_pytest.py  test_phase1_phase6_interview_brief_flow_pytest.py  test_phase1_phase6_outreach_note_flow_pytest.py  test_phase1_phase6_resume_bullets_flow_pytest.py  test_phase1_phase6_tailored_summary_flow_pytest.py  test_phase1_phase6_talking_points_flow_pytest.py  test_phase2_meeting_action_items_cli.py  test_phase3_backup_restore_state_pytest.py  test_phase4_summarize_eval_trend_pytest.py  test_phase5b_metadata_model.py  test_phase5c_vault_sync.py  test_phase5e1_gmail_extension.py  test_phase5f_canonical_workflow_routes.py  test_phase5f_gmail_forward_tags.py  test_phase5f_ingest_special_tokens.py  test_phase5f_llm_retry_parity.py  test_phase5f_title_focused_retrieval.py  test_phase5f_unanswerable_normalization.py  test_phase6_company_profiler_cache.py  test_phase6_cover_letter_drafter_pytest.py  test_phase6_follow_up_reminders.py  test_phase6_gap_aggregator_cache.py  test_phase6_job_dedup_pytest.py  test_phase6_job_evaluator_pytest.py  test_phase6_job_fit_golden.py  test_phase6_job_repository.py  test_phase6_outreach_note_drafter_pytest.py  test_phase6_resume_bullets_drafter_pytest.py  test_phase6_retry_failed_job_evaluations_pytest.py  test_phase6_storage_pytest.py  test_phase6_tailored_summary_drafter_pytest.py  test_phase6_talking_points_drafter_pytest.py  test_phase6_telegram_notifier.py  (+4 more)
(+179 files in other folders)
