[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-local"
version = "0.1.0"
description = "Local-first AI operations system for ingestion, cited RAG, and job-search workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jay Dreyer" },
]
license = { text = "MIT" }
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-cov==6.3.0",
  "mypy==1.18.2",
  "pip-audit==2.9.0",
  "ruff==0.15.5",
  "pre-commit==4.5.1",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/phase1/ingestion_pipeline.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --tb=short"

[tool.mypy]
python_version = "3.11"
files = [
  "scripts/llm_client.py",
  "scripts/phase1/group_model.py",
  "scripts/phase1/ingestion_pipeline.py",
  "tests/test_llm_client_pytest.py",
  "tests/phase1/test_group_model_pytest.py",
  "tests/phase1/test_ingestion_pipeline_pytest.py",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
follow_imports = "silent"
