[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-local"
version = "0.1.0"
description = "Local-first AI operations system for ingestion, cited RAG, and job-search workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jay Dreyer" },
]
license = { text = "MIT" }
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-cov==6.3.0",
  "mypy==1.18.2",
  "pip-audit==2.9.0",
  "ruff==0.15.5",
  "pre-commit==4.5.1",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/eval/run_job_fit_golden.py" = ["E402"]
"scripts/phase1/ingest_bridge_api.py" = ["B008", "E402", "I001"]
"scripts/phase1/bridge_routes_core.py" = ["B008"]
"scripts/phase1/ingest_from_payload.py" = ["E402"]
"scripts/phase1/ingestion_pipeline.py" = ["E402"]
"scripts/phase1/retrieval.py" = ["E402"]
"scripts/phase5/vault_sync.py" = ["I001"]
"scripts/phase6/company_profiler.py" = ["I001"]
"scripts/phase6/job_dedup.py" = ["I001"]
"scripts/phase6/job_repository.py" = ["I001"]
"tests/test_phase5b_metadata_model.py" = ["I001"]
"tests/test_phase5e1_gmail_extension.py" = ["I001"]
"tests/test_phase5f_canonical_workflow_routes.py" = ["I001"]
"tests/test_phase6c_evaluation_observation.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --tb=short"

[tool.mypy]
python_version = "3.11"
files = [
  "scripts/llm_client.py",
  "scripts/phase1/group_model.py",
  "scripts/phase1/ingestion_pipeline.py",
  "scripts/phase1/rag_query.py",
  "scripts/phase6/job_evaluator.py",
  "tests/test_llm_client_pytest.py",
  "tests/phase1/test_group_model_pytest.py",
  "tests/phase1/test_ingestion_pipeline_pytest.py",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
follow_imports = "silent"
